--- a/src/Web/HealthClinic.Web/Views/Patient/ViewAll.cshtml
+++ b/src/Web/HealthClinic.Web/Views/Patient/ViewAll.cshtml
@@ -62,8 +62,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.Id }, new { onclick = "return confirm('Do you want to remove this patient?');" })
+                @Html.ActionLink("Details", "Details", new { id=item.Id })
             </td>
         </tr>
 }
