--- a/src/Web/HealthClinic.Web/Views/PatientNote/Create.cshtml
+++ b/src/Web/HealthClinic.Web/Views/PatientNote/Create.cshtml
@@ -1,39 +1,28 @@
 ﻿@model HealthClinic.Web.Models.PatientNoteModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
 <h4>PatientNoteModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @Html.Hidden("Id")
             @Html.Hidden("PatientId")
-            @Html.Hidden("Created")
-            @Html.Hidden("Edited")
-        <div class="form-group">
-            Created: @Model.Created.ToString("dd/MM/yyyy")
-            Edited: @(Model.Edited != DateTime.MinValue ? Model.Edited.ToString("dd/MM/yyyy") : "-")
-        </div>
             <div class="form-group">
                 <label asp-for="Note" class="control-label"></label>
                 <textarea asp-for="Note" class="form-control"></textarea>
                 <span asp-validation-for="Note" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
