--- a/src/Web/HealthClinic.Web/Views/Patient/ViewAll.cshtml
+++ b/src/Web/HealthClinic.Web/Views/Patient/ViewAll.cshtml
@@ -61,8 +61,9 @@
                 @Html.DisplayFor(modelItem => item.Phone)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id })
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Assessment", "Assessment", "DiabetesRisk", new { patientId = item.Id })
             </td>
         </tr>
 }
