--- a/src/Web/HealthClinic.Web/Views/Patient/Create.cshtml
+++ b/src/Web/HealthClinic.Web/Views/Patient/Create.cshtml
@@ -50,7 +50,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="ViewAll">Back to List</a>
 </div>
 
 @section Scripts {
