--- a/src/Web/HealthClinic.Web/Views/Patient/Create.cshtml
+++ b/src/Web/HealthClinic.Web/Views/Patient/Create.cshtml
@@ -28,7 +28,7 @@
                 <span asp-validation-for="Dob" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Sex" class="control-label"></label>
+                <label asp-for="Sex" class="control-label">Sex (M or F)</label>
                 <input asp-for="Sex" class="form-control" />
                 <span asp-validation-for="Sex" class="text-danger"></span>
             </div>
@@ -38,7 +38,7 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Phone" class="control-label"></label>
+                <label asp-for="Phone" class="control-label">Phone (example: 111-222-3333)</label>
                 <input asp-for="Phone" class="form-control" />
                 <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
